Fixed visual bug in FireFox where tutorial div was showing up behind minimap. Changed "sorry!" text.

--- a/global.css
+++ b/global.css
@@ -360,7 +360,7 @@ body {
 #tutorial{
     text-align: center;
     position: relative;
-    z-index: 11;
+    z-index: 20;
     display: none;
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.4) 75%, rgba(0, 0, 0, 0) 100%);
     padding: 7% 0% 0% 0%;
